--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,25 +1,29 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
-  "icons": [
-    {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
-    }
-  ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "manifest_version": 2,
+
+  "name": "Fake News Detector",
+  "description": "This extension helps users to detect fake news, questionable content on websites, and clickbait.",
+  "version": "0.0.1",
+
+  "background": {
+    "scripts": ["popup.js"],
+    "persistent": true
+  },
+
+  "icons": {
+    "16": "logo-small.png",
+    "48": "logo-small.png",
+    "128": "logo-small.png"
+  },
+
+  "browser_action": {
+    "default_popup": "index.html",
+    "default_title": "Open the popup"
+  },
+
+  "permissions": [
+        "tabs",
+        "http://*/",
+        "https://*/"
+  ]
 }
