--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,6 +4,7 @@ certifi==2020.6.20
 chardet==3.0.4
 click==7.1.2
 firebase-admin==4.3.0
+firestore-model==0.0.4
 Flask==1.1.2
 Flask-Script==2.0.6
 google-api-core==1.21.0
