--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -21,6 +21,7 @@ httplib2==0.18.1
 idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.2
+livereload==2.6.2
 MarkupSafe==1.1.1
 msgpack==1.0.0
 protobuf==3.12.2
@@ -30,6 +31,7 @@ pytz==2020.1
 requests==2.24.0
 rsa==4.6
 six==1.15.0
+tornado==6.0.4
 uritemplate==3.0.1
 urllib3==1.25.9
 Werkzeug==1.0.1
