Configured flask-react app, updated README & requirements

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,4 @@
+astroid==2.4.2
 CacheControl==0.12.6
 cachetools==4.1.1
 certifi==2020.6.20
@@ -19,19 +20,26 @@ googleapis-common-protos==1.52.0
 grpcio==1.30.0
 httplib2==0.18.1
 idna==2.10
+isort==4.3.21
 itsdangerous==1.1.0
 Jinja2==2.11.2
+lazy-object-proxy==1.4.3
 livereload==2.6.2
 MarkupSafe==1.1.1
+mccabe==0.6.1
 msgpack==1.0.0
 protobuf==3.12.2
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pylint==2.5.3
+python-dotenv==0.14.0
 pytz==2020.1
 requests==2.24.0
 rsa==4.6
 six==1.15.0
+toml==0.10.1
 tornado==6.0.4
 uritemplate==3.0.1
 urllib3==1.25.9
 Werkzeug==1.0.1
+wrapt==1.12.1
