--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
+    "concurrently": "^5.2.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
@@ -17,9 +18,9 @@
   "scripts": {
     "start": "react-scripts start",
     "start-api": "cd .. && cd backend && venv/bin/flask run --no-debugger",
+    "concurrently": "concurrently \"react-scripts start\" \"cd .. && cd backend && venv/bin/flask run --no-debugger\"",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "react-scripts test"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -36,5 +37,5 @@
       "last 1 safari version"
     ]
   },
-"proxy": "http://localhost:5000"
+  "proxy": "http://localhost:5000"
 }
