--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "concurrently": "^5.2.0",
+    "psl": "^1.8.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-collapsible": "^2.8.0",
