--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -3,10 +3,11 @@
 
   "name": "Fake News Detector",
   "description": "This extension helps users to detect fake news, questionable content on websites, and clickbait.",
-  "version": "0.0.1",
+  "version": "1.0",
 
   "background": {
-    "scripts": ["popup.js"],
+    "scripts": ["popup.js", 
+                "getUrl.js"],
     "persistent": true
   },
 
@@ -23,6 +24,8 @@
 
   "permissions": [
         "tabs",
+        "sessions",
+        "<all_urls>",
         "http://*/",
         "https://*/"
   ]
