--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,15 +1,7 @@
 {
-  "manifest_version": 2,
-
   "name": "Fake News Detector",
   "description": "This extension helps users to detect fake news, questionable content on websites, and clickbait.",
-  "version": "1.0",
-
-  "background": {
-    "scripts": ["popup.js", 
-                "getUrl.js"],
-    "persistent": true
-  },
+  "version": "1.0.2",
 
   "icons": {
     "16": "assets/logo-small.png",
@@ -17,16 +9,33 @@
     "128": "assets/logo-small.png"
   },
 
-  "browser_action": {
-    "default_popup": "index.html",
-    "default_title": "Open the popup"
+  "background": {
+    "scripts": ["content.js"],
+    "persistent": false
   },
+
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["jquery.js", "jquery-ui.js", "content.js"],
+      "run_at": "document_end"
+    }
+  ],
+
+  "browser_action": {
+    "default_popup": "popup.html"
+  },
+
 
   "permissions": [
         "tabs",
-        "sessions",
+        "activeTab",
         "<all_urls>",
         "http://*/",
         "https://*/"
-  ]
+  ],
+  
+  "web_accessible_resources": [],
+
+  "manifest_version": 2
 }
