Added webscraping script, TODOs for Results and main.py, updated libraries

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,13 @@
 astroid==2.4.2
+beautifulsoup4==4.9.1
 CacheControl==0.12.6
 cachetools==4.1.1
 certifi==2020.6.20
 chardet==3.0.4
 click==7.1.2
+cssselect==1.1.0
+feedfinder2==0.0.4
+feedparser==5.2.1
 firebase-admin==4.3.0
 firestore-model==0.0.4
 Flask==1.1.2
@@ -22,23 +26,38 @@ httplib2==0.18.1
 idna==2.10
 isort==4.3.21
 itsdangerous==1.1.0
+jieba3k==0.35.1
 Jinja2==2.11.2
+joblib==0.16.0
 lazy-object-proxy==1.4.3
 livereload==2.6.2
+lxml==4.5.2
 MarkupSafe==1.1.1
 mccabe==0.6.1
 msgpack==1.0.0
+newspaper3k==0.2.8
+nltk==3.5
+Pillow==7.2.0
 protobuf==3.12.2
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pylint==2.5.3
+python-dateutil==2.8.1
 python-dotenv==0.14.0
 pytz==2020.1
+PyYAML==5.3.1
+regex==2020.7.14
 requests==2.24.0
+requests-file==1.5.1
 rsa==4.6
 six==1.15.0
+soupsieve==2.0.1
+tinysegmenter==0.3
+tldextract==2.2.3
 toml==0.10.1
 tornado==6.0.4
+tqdm==4.48.2
+typed-ast==1.4.1
 uritemplate==3.0.1
 urllib3==1.25.9
 Werkzeug==1.0.1
