--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -37,6 +37,7 @@ mccabe==0.6.1
 msgpack==1.0.0
 newspaper3k==0.2.8
 nltk==3.5
+numpy==1.19.1
 Pillow==7.2.0
 protobuf==3.12.2
 pyasn1==0.4.8
@@ -50,8 +51,12 @@ regex==2020.7.14
 requests==2.24.0
 requests-file==1.5.1
 rsa==4.6
+scikit-learn==0.21.3
+scipy==1.5.2
 six==1.15.0
+sklearn==0.0
 soupsieve==2.0.1
+threadpoolctl==2.1.0
 tinysegmenter==0.3
 tldextract==2.2.3
 toml==0.10.1
