--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-collapsible": "^2.8.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
+    "react-router-last-location": "^2.0.1",
     "react-scripts": "3.4.1",
     "styled-components": "^5.1.1",
     "uuid": "^8.3.0"
